--- a/demo.html
+++ b/demo.html
@@ -25,10 +25,10 @@
 	}
 </style>
 
-		<script src="https://cdn.jsdelivr.net/webcomponentsjs/0.7.0/webcomponents.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/webcomponentsjs/latest/webcomponents.min.js"></script>
 		<link href="https://cdn.jsdelivr.net/fontawesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 		<!-- <link href="https://cdn.jsdelivr.net/bootswatch/3.3.2/darkly/bootstrap.min.css" rel="stylesheet"> -->
-		<link href="yt-search.html" rel="import">
+		<link href="dist/yt-search.html" rel="import">
 	</head>
 	<body>
 		<div id="wrap">
