--- a/demo.html
+++ b/demo.html
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
-<title>test</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>yt-search YOUTUBE検索のweb component</title>
 <style>
-	#wrap{
-		max-width:800px;
-		margin:10px auto;
-	}
+/* Space out content a bit */
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+/* Everything but the jumbotron gets side spacing for mobile first views */
+.header,
+.marketing,
+.footer {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+/* Custom page header */
+.header {
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e5e5e5;
+}
+/* Make the masthead heading the same height as the navigation */
+.header h3 {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 40px;
+}
+
+/* Custom page footer */
+.footer {
+  padding-top: 19px;
+  color: #777;
+  border-top: 1px solid #e5e5e5;
+}
+
+/* Customize container */
+@media (min-width: 768px) {
+  .container {
+    max-width: 730px;
+  }
+}
+.container-narrow > hr {
+  margin: 30px 0;
+}
+
+/* Main marketing message and sign up button */
+.jumbotron {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 21px;
+}
+
+/* Supporting marketing content */
+.marketing {
+  margin: 40px 0;
+}
+.marketing p + h4 {
+  margin-top: 28px;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+  /* Remove the padding we set earlier */
+  .header,
+  .marketing,
+  .footer {
+    padding-right: 0;
+    padding-left: 0;
+  }
+  /* Space out the masthead */
+  .header {
+    margin-bottom: 30px;
+  }
+  /* Remove the bottom border on the jumbotron for visual effect */
+  .jumbotron {
+    border-bottom: 0;
+  }
+}
 
 	/*
 		for shadow dom supported browser
@@ -27,23 +103,153 @@
 
 		<script src="https://cdn.jsdelivr.net/webcomponentsjs/latest/webcomponents.min.js"></script>
 		<link href="https://cdn.jsdelivr.net/fontawesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-		<!-- <link href="https://cdn.jsdelivr.net/bootswatch/3.3.2/darkly/bootstrap.min.css" rel="stylesheet"> -->
+		<link href="https://cdn.jsdelivr.net/bootswatch/3.3.2/darkly/bootstrap.min.css" rel="stylesheet">
 		<link href="dist/yt-search.html" rel="import">
+
+		<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-63207906-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	</head>
 	<body>
-		<div id="wrap">
+
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="#">Home</a></li>
+            <li role="presentation"><a href="#live-demo">Live DEMO</a></li>
+			<li role="presentation"><a href="#usage">使用方法</a></li>
+			<li role="presentation"><a href="https://github.com/Aquei/yt-search">Github</a></li>
+          </ul>
+        </nav>
+        <h3 class="text-muted">yt-search</h3>
+      </div>
+
+      <div class="jumbotron">
+        <h1>YouTube + Search = yt-search</h1>
+		<p class="lead">yt-searchは<a href="https://www.youtube.com/">YouTube</a>の検索結果を一覧にして見やすく表示するWeb Componentsです。<a href="https://developers.google.com/youtube/v3/?hl=ja">YouTube Data API v3</a>を利用しており、API keyを用意してファイルをアップロードするだけで使えます。</p>
+        <p><a class="btn btn-lg btn-success" href="https://github.com/Aquei/yt-search/archive/master.zip" role="button"><i class="fa fa-download"></i> Download</a></p>
+	</div>
+
+	<h4>広告</h4>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- github pages -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6931805962182644"
+     data-ad-slot="7364765657"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+	  <div class="row marketing" id="live-demo">
+		  <div class="col-lg-12">
+			  <div class="page-header">
+  <h1>Live DEMO <small>&quot;michael jackson&quot;で検索</small></h1>
+</div>
+<pre><code>&lt;yt-search
+  data-query=&quot;michael jackson&quot;
+  data-play-btn-txt=&quot; 再生&quot;
+  data-playing-btn-txt=&quot; 再生中&quot;
+  data-max-results=&quot;6&quot;
+  data-api-key=&quot;AIzaSyDUlyqKGQuiRTnj1N5Y_iCJIVJMAgYMZ3U&quot;
+  data-params=&#039;{&quot;videoCategoryId&quot;:10}&#039;
+  data-scroll=&quot;on&quot;
+  data-theme=&quot;darkly&quot;
+&gt;&lt;/yt-search&gt;</code></pre>
+<p>このようなマークアップで下のように表示されます。</p>
 			<yt-search
-				data-query="datf punk"
+				data-query="michael jackson"
 				data-play-btn-txt=" 再生"
 				data-playing-btn-txt=" 再生中"
-				data-max-results="7"
+				data-max-results="6"
 				data-api-key="AIzaSyDUlyqKGQuiRTnj1N5Y_iCJIVJMAgYMZ3U"
-				data-params="{}"
-				data-shadow-dom=""
+				data-params='{"videoCategoryId":10}'
 				data-scroll="on"
-				data-theme="cyborg"
+				data-theme="darkly"
 				></yt-search>
 		</div>
+
+		<div class="col-lg-12">
+			<h2 id="usage">基本的な使用方法</h2>
+			<p>distフォルダをアップロードし、yt-search.htmlをimportしてください。data-query属性に検索キーワードを指定します。また、data-api-keyにapi keyを指定します。api keyは<a href="https://console.developers.google.com/">Google Developers Console</a>から<b>YouTube Data APIを有効</b>にした、<b class="text-danger">ブラウザ アプリケーションキー</b>を取得してください。(リファラを制限するのをお忘れなく)</p>
+			<p>省略可能な属性は以下のとおりです。</p>
+		</div>
+        <div class="col-lg-6">
+          <h4 class="text-info">data-play-btn-txt</h4>
+          <p>クリックすると再生されるボタンのテキストです。省略した場合は「再生」になります。</p>
+
+          <h4 class="text-info">data-playing-btn-txt</h4>
+          <p>再生ボタンがクリックされた後のテキストです。省略した場合は「再生中」になります。</p>
+
+          <h4 class="text-info">data-max-results</h4>
+          <p>検索結果を何件まで表示するかです。省略した場合は&quot;5&quot;になります。</p>
+	  </div>
+        <div class="col-lg-6">
+          <h4 class="text-info">data-params</h4>
+		  <p><a href="https://developers.google.com/youtube/v3/docs/search/list?hl=ja">パラメータ</a>と値が対になったJSON文字列を設定できます。認証が必要なパラメータは不可です。</p>
+
+          <h4 class="text-info">data-scroll</h4>
+          <p>&quot;on&quot;に設定すると、再生ボタンがクリックされた時にビデオ画面までスクロールします。</p>
+
+          <h4 class="text-info">data-theme</h4>
+		  <p>配色を指定できます。<a href="https://bootswatch.com/">Bootswatch</a>から選択できます。</p>
+
+		  <h4 class="text-info">data-shadow-dom</h4>
+		  <p>&quot;off&quot;に設定すると、shadow rootを作りません。</p>
+	  </div>
+
+	  <div class="col-lg-6">
+		  <h2>小技</h2>
+		  <h4>tips 1</h4>
+		  <p>ボタンテキストはアイコンフォントとスタイルのfont-familyでアイコンが表示できます。直接文字を指定したり、css contentを利用したり。</p>
+
+		  <h4>tips 2</h4>
+		  <p>スクロールはネイティブにサポートされていれば、smooth scrollします(現時点ではfire foxのみ)。もし<a href="http://jquery.com/">jQuery</a>と<a href="http://demos.flesler.com/jquery/scrollTo/">jQuery.scrollTo</a>が読み込まれていれば、他のブラウザでもsmooth scrollします。</p>
+
+		  <h4>tips 3</h4>
+		  <p>IE9+でも動作すると思いますが、IEやFirefoxはWeb Componentsをサポートしていないので、<a href="http://webcomponents.org/">polyfillが必要</a>です。</p>
+	  </div>
+	  <div class="col-lg-6">
+		  <h4>広告</h4>
+		  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		  <!-- github pages -->
+		  <ins class="adsbygoogle"
+			  style="display:block"
+			  data-ad-client="ca-pub-6931805962182644"
+			  data-ad-slot="7364765657"
+			  data-ad-format="auto"></ins>
+		  <script>
+			  (adsbygoogle = window.adsbygoogle || []).push({});
+		  </script>
+	  </div>
+
+
+
+      </div>
+
+      <footer class="footer">
+		  <p>&copy; <a href="https://srytk.com/">aquei</a></p>
+      </footer>
+
+    </div> <!-- /container -->
+
+	<script src="https://cdn.jsdelivr.net/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.scrollto/2.1.0/jquery.scrollTo.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.localscroll/1.4.0/jquery.localScroll.min.js"></script>
+	<script>
+		$.localScroll();
+	</script>
+
+	<script src="https://cdn.jsdelivr.net/jsdelivr-rum/latest/jsdelivr-rum.min.js" async defer></script>
 	</body>
 
 </html>
