u can import html from github pages

--- a/demo.html
+++ b/demo.html
@@ -135,7 +135,8 @@ body {
       <div class="jumbotron">
         <h1>YouTube + Search = yt-search</h1>
 		<p class="lead">yt-searchは<a href="https://www.youtube.com/">YouTube</a>の検索結果を一覧にして見やすく表示するWeb Componentsです。<a href="https://developers.google.com/youtube/v3/?hl=ja">YouTube Data API v3</a>を利用しており、API keyを用意してファイルをアップロードするだけで使えます。</p>
-        <p><a class="btn btn-lg btn-success" href="https://github.com/Aquei/yt-search/archive/master.zip" role="button"><i class="fa fa-download"></i> Download</a></p>
+		<p><a class="btn btn-lg btn-success" href="https://github.com/Aquei/yt-search/archive/master.zip" role="button"><i class="fa fa-download"></i> Download</a></p>
+		<p>or...<pre><code>&lt;link href=&quot;//aquei.github.io/yt-search/dist/yt-search.html&quot; rel=&quot;import&quot;&gt;</code></pre></p>
 	</div>
 
 	<h4>広告</h4>
