--- a/demo.html
+++ b/demo.html
@@ -90,7 +90,7 @@ body {
 		for shadow dom supported browser
 	*/
 	yt-search::shadow a.btn{
-		font-family:FontAwesome,inherit;
+		font-family:FontAwesome,sans-serif;
 	}
 
 	/*
@@ -100,6 +100,11 @@ body {
 		font-family:FontAwesome,sans-serif;
 	}
 </style>
+
+		
+		<!--[if IE]>
+			<script src="https://cdn.jsdelivr.net/classlist/2014.01.31/classList.min.js"></script>
+		<![endif]-->
 
 		<script src="https://cdn.jsdelivr.net/webcomponentsjs/latest/webcomponents.min.js"></script>
 		<link href="https://cdn.jsdelivr.net/fontawesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
